--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,9 @@
     <string name="title_activity_message">MessageActivity</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
     <string name="title_section1">Home</string>
-    <string name="title_section2">Pull</string>
-    <string name="title_section3">Push</string>
-    <string name="title_section4">Messages</string>
+    <string name="title_section2">Play</string>
+    <string name="title_section3">Get Media</string>
+    <string name="title_section4">Neighbors</string>
     <string name="get_started">To get started, log in using Facebook</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -24,5 +24,13 @@
     <string name="title_activity_test_activity2">TestActivity2</string>
     <string name="login_button">TestActivity2</string>
     <string name="title_activity_drawer">drawerActivity</string>
+    <string name="pull_info">Select the type of album to pull</string>
+    <string name="pull_fb">Download a Facebook album</string>
+    <string name="pull_storage">Select an album from  </string>
+    <string name="logout">Log Out </string>
+    <string name="permissions">Permissions </string>
+    <string name="account">Account </string>
+
+
 
 </resources>
