added navigation drawer icons, edited homepage to show log in  and login text only when session is not open. Populated FB fragment list box with user's album titles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,8 @@
     <string name="logout">Log Out </string>
     <string name="permissions">Permissions </string>
     <string name="account">Account </string>
-
+    <string name="share">Share App </string>
+    <string name="rate">Rate App </string>
 
 
 </resources>
