--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,13 @@
     <string name="title_activity_rate">Rate</string>
     <string name="title_activity_share">Share</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_photowebview">Photo Web View</string>
+    <string name="title_activity_bluetooth">Bluetooth</string>
+    <string name="on">On</string>
+    <string name="make_discoverable">Make Discoverable</string>
+    <string name="string">String</string>
+    <string name="bluetooth_off">Bluetooth Off</string>
+    <string name="device_scan">Device Scan</string>
+    <string name="bluetooth_on">Bluetooth On</string>
 
 </resources>
